ジャンケン，数字当て，星座占いを追加した

--- a/public/seiza.html
+++ b/public/seiza.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <title>星座占い</title>
-</html>
+</head>
 <body>
     <form action="/seiza">
         <input type="text" name="hand" required>
-        <label for="hand">あなたの星座を入れてください</label>
-        <input type="submit" values="じゃんけん ポン">
-    </form>   
+        <label for="hand">あなたの星座は？</label>
+        <input type="submit" value="送信">
+
+    </form>
 </body>
 </html>
