--- a/public/suziate.html
+++ b/public/suziate.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>丁半</title>
+    <title>数字当て</title>
 </head>
 <body>
     <form action="/suziate">
